# ComfyUI-ZImageTurboHQNodes

./: .gitignore  CHANGELOG.md  QWEN3VL_INSTRUCT.md  README.md  RELEASE.md  THIRD_PARTY_NOTICES.md  __init__.py  pyproject.toml  zimage_hq_nodes.py
.github/workflows/: ci.yml  release.yml
scripts/: build_release.ps1
workflows/: workflow_tongyi_zimage_turbo_base.json  workflow_tongyi_zimage_turbo_two_pass_refine.json
