[project]
name = "comfyui-zimage-turbo-hq-nodes"
version = "0.1.0"
description = "Self-contained ComfyUI nodes for Tongyi Z-Image-Turbo high-quality workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "marduk191" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

dependencies = []

[tool.comfy]
PublisherId = "marduk191"
DisplayName = "ComfyUI ZImage Turbo HQ Nodes"
Icon = ""
